Style tweaks and fixes to web3 - Make signature text cursor, but link and summary expand pointer cursor - Move signature to after message (because it is the message content that is signed - Align signature padding and fix spacing to be consistent with edited message, replies, etc

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -643,6 +643,9 @@ td {
 
 .web3-signature, .web3-address {
 	word-break: break-all;
+}
+
+.web3-signature {
 	cursor: text;
 }
 
